--- a/src/routes/layout.css
+++ b/src/routes/layout.css
@@ -1,1 +1,2 @@
+@import url('https://fonts.googleapis.com/css2?family=Edu+VIC+WA+NT+Hand+Pre:wght@400..700&family=Playwrite+NZ:wght@100..400&display=swap');
 @import 'tailwindcss';
